@@ -4,32 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
   
     <div id="contenedorMuestras">
-        <p>Natamicina</p>
-        <input type="button" name="muestra" class="btnMuestras" id="1" value="Solicitar muestra">
-
-        <p>Beta Caroteno</p>
-        <input type="button" name="muestra" class="btnMuestras" id="2" value="Solicitar muestra">
-
-        <p>Sucralosa</p>
-        <input type="button" name="muestra" class="btnMuestras" id="3" value="Solicitar muestra">
-
-        <p>Acesulfame K</p>
-        <input type="button" name="muestra" class="btnMuestras" id="4" value="Solicitar muestra">
-
-        <p>Dioxido de titanio</p>
-        <input type="button" name="muestra" class="btnMuestras" id="5" value="Solicitar muestra">
-
-        <p>Ácido cítrico</p>
-        <input type="button" name="muestra" class="btnMuestras" id="6" value="Solicitar muestra">
+      
     </div>
 
-<h2 style="margin-top: 20px;">Muestras Solicitadas</h2>
-<table >
+<h2 style="margin-top: 40px;">Muestras Solicitadas</h2>
+<p id="contadorMuestras"></p>
+
+<table>
     <tr><td class="tabla"></td></tr>
     <tr><td class="tabla"></td></tr>
     <tr><td class="tabla"></td></tr>
@@ -39,6 +26,8 @@
 
 <input type="button" id="continuarPedido" value="Proceder a finalizar pedido" style="margin-top: 20px;">
 
-    <script src="./index.js"></script>
+    <script src="./js/globales.js"></script>
+    <script src="./js/funciones.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
