@@ -1,0 +1,6 @@
+document.addEventListener('DOMContentLoaded', mostrarMuestras);
+
+contenedorMuestras.addEventListener('click', muestraSolicitadax);
+
+btnContinuarPedido.addEventListener('click', funContinuarPedido);
+
